# Friday

./: CLAUDE.md  DEPLOY_MINICPMO26.md  README.md  config.json  deploy_friday_separate.py  deploy_minicpmo26.py  download_gguf.sh  fix_transformers.sh  gateway_simple.py  install_deps.sh  install_env.sh  jarvis.py  load_4bit_model_solution.py  local_deploy.md  local_deploy.sh  run_webrtc.sh  start_friday.sh  start_friday_complete.sh  start_opencode.sh  stop_friday.sh  task.md  test_friday.sh  test_vision_only.py  ws_worker.py
WebRTC/omini_backend_code/code/: docker-compose.yml  enhanced_logging_config.py  main.py  pyproject.toml
WebRTC/omini_backend_code/code/api/: inference_service_routes.py
WebRTC/omini_backend_code/code/common/: __init__.py
WebRTC/omini_backend_code/code/common/enums/: model_type.py
WebRTC/omini_backend_code/code/common/redis/: __init__.py  redis_client.py
WebRTC/omini_backend_code/code/common/utils/: __init__.py  audio_converter_util.py  httpUtil.py  image_util.py  opuslib_util.py  scheduler_manager.py
WebRTC/omini_backend_code/code/config/: __init__.py  base.yaml  livekit.yaml  local.yaml  settings.py
WebRTC/omini_backend_code/code/middleware/: request_trace.py
WebRTC/omini_backend_code/code/services/: heartbeat_monitor.py  inference_service_manager.py
WebRTC/omini_backend_code/code/voice_chat/: __init__.py  livekit_room.py  model_call.py  omni_stream.py  robot_service.py  routes.py
WebRTC/omini_backend_code/code/voice_chat/entity/: session.py  token.py
WebRTC/omini_backend_code/code/voice_chat/vad/: vad_preloader.py  vad_utils.py
(+221 files in other folders)
